--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
 
                 <div class="col-12  text-center">
-                    <div id="name" class="area">Aynur</div>
+                    <div id="name" class="area">AynurZumba</div>
                 </div>
 
                 <div class="col-12 text-center">
